force-app/main/default/objects/animalos__Assessment__c/fields/aos_Cat_s_Play_Sessions_per_Day__c.field-meta.xml
<CustomField>
    <fullName>aos_Cat_s_Play_Sessions_per_Day__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>How many play sessions per day?</inlineHelpText>
    <label>Cat&apos;s Play Sessions per Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>