force-app/main/default/objects/animalos__Assessment__c/fields/aos_Chase_birds_given_the_chance__c.field-meta.xml
<CustomField>
    <fullName>aos_Chase_birds_given_the_chance__c</fullName>
    <label>Chase birds given the chance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>