force-app/main/default/objects/animalos__Assessment__c/fields/aos_Chase_squirrels_rabbits_given_the__c.field-meta.xml
<CustomField>
    <fullName>aos_Chase_squirrels_rabbits_given_the__c</fullName>
    <label>Chase squirrels/rabbits given the chance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>