force-app/main/default/objects/animalos__Assessment__c/fields/aos_Chases_own_tail_hind_end__c.field-meta.xml
<CustomField>
    <fullName>aos_Chases_own_tail_hind_end__c</fullName>
    <label>Chases own tail/hind end</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>