force-app/main/default/objects/animalos__Assessment__c/fields/aos_Checked_By_Vet__c.field-meta.xml
<CustomField>
    <fullName>aos_Checked_By_Vet__c</fullName>
    <label>Checked By Vet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>