force-app/main/default/objects/animalos__Assessment__c/fields/aos_Chewing_Preferences__c.field-meta.xml
<CustomField>
    <fullName>aos_Chewing_Preferences__c</fullName>
    <label>Chewing Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>