force-app/main/default/objects/animalos__Assessment__c/fields/aos_Chewing_scrating_at_doors_floors_etc__c.field-meta.xml
<CustomField>
    <fullName>aos_Chewing_scrating_at_doors_floors_etc__c</fullName>
    <label>Chewing/scrating at doors/floors/etc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>