force-app/main/default/objects/animalos__Assessment__c/fields/aos_Chews_inappropriate_objects__c.field-meta.xml
<CustomField>
    <fullName>aos_Chews_inappropriate_objects__c</fullName>
    <label>Chews inappropriate objects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>