force-app/main/default/objects/animalos__Assessment__c/fields/aos_Child_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>aos_Child_Recommendation__c</fullName>
    <label>Child Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Young children (0-8 Yrs)</fullName>
            </value>
            <value>
                <fullName>Older Children (8-12 yrs)</fullName>
            </value>
            <value>
                <fullName>Teenagers (12+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>