force-app/main/default/objects/animalos__Assessment__c/fields/aos_Child_Recommendation_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Child_Recommendation_Comments__c</fullName>
    <label>Child Recommendation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>