force-app/main/default/objects/animalos__Assessment__c/fields/aos_Childrens_Age_Ranges__c.field-meta.xml
<CustomField>
    <fullName>aos_Childrens_Age_Ranges__c</fullName>
    <description>Foster Care Questionnaire</description>
    <label>Childrens Age Ranges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-2</fullName>
            </value>
            <value>
                <fullName>3-5</fullName>
            </value>
            <value>
                <fullName>6-8</fullName>
            </value>
            <value>
                <fullName>9-12</fullName>
            </value>
            <value>
                <fullName>13-17</fullName>
            </value>
            <value>
                <fullName>18+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>