force-app/main/default/objects/animalos__Assessment__c/fields/aos_Chlamydia_Grade__c.field-meta.xml
<CustomField>
    <fullName>aos_Chlamydia_Grade__c</fullName>
    <label>Chlamydia Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>