force-app/main/default/objects/animalos__Assessment__c/fields/aos_CRT__c.field-meta.xml
<CustomField>
    <fullName>aos_CRT__c</fullName>
    <label>CRT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>