force-app/main/default/objects/animalos__Assessment__c/fields/aos_Cues__c.field-meta.xml
<CustomField>
    <fullName>aos_Cues__c</fullName>
    <label>Cues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sit</fullName>
            </value>
            <value>
                <fullName>Hand Target</fullName>
            </value>
            <value>
                <fullName>Follow a Lure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Consent Cue</fullName>
            </value>
            <value>
                <fullName>Wait</fullName>
            </value>
            <value>
                <fullName>Drop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>