force-app/main/default/objects/animalos__Assessment__c/fields/aos_Cues_Notes__c.field-meta.xml
<CustomField>
    <fullName>aos_Cues_Notes__c</fullName>
    <label>Cues Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>