force-app/main/default/objects/animalos__Assessment__c/fields/aos_Current_tick_flea_worm_prevention__c.field-meta.xml
<CustomField>
    <fullName>aos_Current_tick_flea_worm_prevention__c</fullName>
    <label>Current tick/flea/worm prevention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>