force-app/main/default/objects/animalos__Assessment__c/fields/aos_Daily_Routine__c.field-meta.xml
<CustomField>
    <fullName>aos_Daily_Routine__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>What is your foster pet’s routine?</inlineHelpText>
    <label>Daily Routine</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>