force-app/main/default/objects/animalos__Assessment__c/fields/aos_Date_NOTICE_SENT__c.field-meta.xml
<CustomField>
    <fullName>aos_Date_NOTICE_SENT__c</fullName>
    <inlineHelpText>if applicable</inlineHelpText>
    <label>Date NOTICE SENT</label>
    <type>Date</type>
</CustomField>