force-app/main/default/objects/animalos__Assessment__c/fields/aos_Defecates_when_left_alone__c.field-meta.xml
<CustomField>
    <fullName>aos_Defecates_when_left_alone__c</fullName>
    <label>Defecates when left alone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>