force-app/main/default/objects/animalos__Assessment__c/fields/aos_Demeanour__c.field-meta.xml
<CustomField>
    <fullName>aos_Demeanour__c</fullName>
    <label>Demeanour</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAR</fullName>
            </value>
            <value>
                <fullName>QAR</fullName>
            </value>
            <value>
                <fullName>Moribund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>