force-app/main/default/objects/animalos__Assessment__c/fields/aos_Description_of_Your_Foster_Pet__c.field-meta.xml
<CustomField>
    <fullName>aos_Description_of_Your_Foster_Pet__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>How would you describe your foster pet’s personality?</inlineHelpText>
    <label>Description of Your Foster Pet</label>
    <type>TextArea</type>
</CustomField>