force-app/main/default/objects/animalos__Assessment__c/fields/aos_Destructive_Behaviour_History__c.field-meta.xml
<CustomField>
    <fullName>aos_Destructive_Behaviour_History__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>Has there been any destructive behaviours in the home? If so, what have they destroyed and was it while you were home and/or when they were alone? How often has this occurred?</inlineHelpText>
    <label>Destructive Behaviour History</label>
    <type>TextArea</type>
</CustomField>