force-app/main/default/objects/animalos__Assessment__c/fields/aos_Do_you_feel_all_aspects_of_the__c.field-meta.xml
<CustomField>
    <fullName>aos_Do_you_feel_all_aspects_of_the__c</fullName>
    <inlineHelpText>Do you feel all aspects of the adoption were explained clearly, including existing medical and behavioral issues</inlineHelpText>
    <label>Do you feel all aspects of the adopti</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>