force-app/main/default/objects/animalos__Assessment__c/fields/aos_Does_your_dog_or_cat_have_a_new_n__c.field-meta.xml
<CustomField>
    <fullName>aos_Does_your_dog_or_cat_have_a_new_n__c</fullName>
    <inlineHelpText>Does your [dog] or [cat] have a new name</inlineHelpText>
    <label>Does your [dog] or [cat] have a new n</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>