force-app/main/default/objects/animalos__Assessment__c/fields/aos_Does_your_pet_display_any_behaviors__c.field-meta.xml
<CustomField>
    <fullName>aos_Does_your_pet_display_any_behaviors__c</fullName>
    <description>Does your pet display any behaviors you are concerned about</description>
    <inlineHelpText>Does your pet display any behaviors you are concerned about</inlineHelpText>
    <label>Does your pet display any behaviors y</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>