force-app/main/default/objects/animalos__Assessment__c/fields/aos_Dog_Introductions__c.field-meta.xml
<CustomField>
    <fullName>aos_Dog_Introductions__c</fullName>
    <inlineHelpText>Level of sociability or manageability with unfamiliar dogs. One dog is sufficient if response is green. If orange and there is no concerning history gather information on social walks.</inlineHelpText>
    <label>Dog Introductions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appropriate: approach soft/fluid, pro-social, polite, can disengage, may be excitable but regulates</fullName>
            </value>
            <value>
                <fullName>Disinterested: calm/relaxed, content sharing space, does not seek active engagement, not avoidant</fullName>
            </value>
            <value>
                <fullName>Avoids: actively avoids</fullName>
            </value>
            <value>
                <fullName>Focused/fixated: ambiguous social cues, may be overbearing/rude on introduction, tense, inappropriate but does not escalate</fullName>
            </value>
            <value>
                <fullName>Frustrated/conflicted: may vocalise/intimidate other dog, show inappropriate behaviours, remains controllable</fullName>
            </value>
            <value>
                <fullName>High arousal with repulsion: vocalises at any distance, hard to manage, introduction escalates quickly</fullName>
            </value>
            <value>
                <fullName>Lunge/bite/injury caused</fullName>
            </value>
            <value>
                <fullName>Not completed</fullName>
            </value>
            <value>
                <fullName>Calm friendly</fullName>
                <isActive>false</isActive>
                <label>Calm friendly</label>
            </value>
            <value>
                <fullName>Playful</fullName>
                <isActive>false</isActive>
                <label>Playful</label>
            </value>
            <value>
                <fullName>Reactive aggressive</fullName>
                <isActive>false</isActive>
                <label>Reactive aggressive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>