force-app/main/default/objects/animalos__Assessment__c/fields/aos_Dog_Introductions_Notes__c.field-meta.xml
<CustomField>
    <fullName>aos_Dog_Introductions_Notes__c</fullName>
    <label>Dog Introductions Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>