force-app/main/default/objects/animalos__Assessment__c/fields/aos_Dog_s_Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>aos_Dog_s_Activity_Level__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>How active is your Foster Dog?</inlineHelpText>
    <label>Dog&apos;s Activity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>