force-app/main/default/objects/animalos__Assessment__c/fields/aos_Ears__c.field-meta.xml
<CustomField>
    <fullName>aos_Ears__c</fullName>
    <label>Ears</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>