force-app/main/default/objects/animalos__Assessment__c/fields/aos_Ears_IncomingHealthCheck__c.field-meta.xml
<CustomField>
    <fullName>aos_Ears_IncomingHealthCheck__c</fullName>
    <description>How are the animals ears during its incoming health check</description>
    <inlineHelpText>How are the animals ears during its incoming health check?</inlineHelpText>
    <label>Ears Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Dirty</fullName>
            </value>
            <value>
                <fullName>New Injury</fullName>
            </value>
            <value>
                <fullName>Old Injury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>