force-app/main/default/objects/animalos__Assessment__c/fields/aos_Easily_distracted_sights_sounds__c.field-meta.xml
<CustomField>
    <fullName>aos_Easily_distracted_sights_sounds__c</fullName>
    <label>Easily distracted sights/sounds/smells</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>