force-app/main/default/objects/animalos__Assessment__c/fields/aos_Eating__c.field-meta.xml
<CustomField>
    <fullName>aos_Eating__c</fullName>
    <label>Eating</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eats normal pace</fullName>
            </value>
            <value>
                <fullName>Eats/chews enrichment</fullName>
            </value>
            <value>
                <fullName>Eats in presence of person</fullName>
            </value>
            <value>
                <fullName>Not eating unless food provided nearby</fullName>
            </value>
            <value>
                <fullName>Eats frantically or snatches</fullName>
            </value>
            <value>
                <fullName>Not eating at all</fullName>
            </value>
            <value>
                <fullName>Freezing when eating when approached</fullName>
            </value>
            <value>
                <fullName>Growls/ bears teeth/snaps approached</fullName>
            </value>
            <value>
                <fullName>Ate all food</fullName>
            </value>
            <value>
                <fullName>Ate some food</fullName>
            </value>
            <value>
                <fullName>Ate only wet food</fullName>
            </value>
            <value>
                <fullName>Did not eat</fullName>
            </value>
            <value>
                <fullName>Drank water</fullName>
            </value>
            <value>
                <fullName>Eats frantically</fullName>
                <isActive>false</isActive>
                <label>Eats frantically</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>