force-app/main/default/objects/animalos__Assessment__c/fields/aos_Escape_Behaviour_and_Fencing_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Escape_Behaviour_and_Fencing_Details__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>Has your foster dog attempted to or escaped from your home? If yes, how many times and describe the situation(s)? What is your fencing like (height and material)?</inlineHelpText>
    <label>Escape Behaviour and Fencing Details</label>
    <type>TextArea</type>
</CustomField>