force-app/main/default/objects/animalos__Assessment__c/fields/aos_Escapse_from_home_yard_given_the__c.field-meta.xml
<CustomField>
    <fullName>aos_Escapse_from_home_yard_given_the__c</fullName>
    <label>Escapse from home/yard given the chance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>