force-app/main/default/objects/animalos__Assessment__c/fields/aos_Exploration_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Exploration_Comments__c</fullName>
    <label>Exploration Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>