force-app/main/default/objects/animalos__Assessment__c/fields/aos_Exploration_SAE__c.field-meta.xml
<CustomField>
    <fullName>aos_Exploration_SAE__c</fullName>
    <inlineHelpText>Excellent	- Comes out of enclosure immediately, explores (Birds/Parrots Mainly).
Moderate	- Eventually comes out.
Limited - Requires encouragement.
Poor - Does not explore outside of enclosure.</inlineHelpText>
    <label>Exploration SAE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>