force-app/main/default/objects/animalos__Assessment__c/fields/aos_External_Parasite_Check__c.field-meta.xml
<CustomField>
    <fullName>aos_External_Parasite_Check__c</fullName>
    <label>External Parasite Check</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Fleas</fullName>
            </value>
            <value>
                <fullName>Mites</fullName>
            </value>
            <value>
                <fullName>Flea dirt visible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>