force-app/main/default/objects/animalos__Assessment__c/fields/aos_External_Parasites__c.field-meta.xml
<CustomField>
    <fullName>aos_External_Parasites__c</fullName>
    <label>External Parasites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>