force-app/main/default/objects/animalos__Assessment__c/fields/aos_Eyes__c.field-meta.xml
<CustomField>
    <fullName>aos_Eyes__c</fullName>
    <label>Eyes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>