force-app/main/default/objects/animalos__Assessment__c/fields/aos_Eyes_IncomingHealthCheck__c.field-meta.xml
<CustomField>
    <fullName>aos_Eyes_IncomingHealthCheck__c</fullName>
    <description>How are the animal&apos;s eyes on incoming health check?</description>
    <inlineHelpText>How are the animal&apos;s eyes on incoming health check?</inlineHelpText>
    <label>Eyes Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Discharge</fullName>
            </value>
            <value>
                <fullName>New Injury</fullName>
            </value>
            <value>
                <fullName>Old Injury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>