force-app/main/default/objects/animalos__Assessment__c/fields/aos_Face_Eyes_SFS__c.field-meta.xml
<CustomField>
    <fullName>aos_Face_Eyes_SFS__c</fullName>
    <description>Face/Eyes - straight from sachet</description>
    <inlineHelpText>Face/Eyes - straight from sachet</inlineHelpText>
    <label>Face/Eyes - SFS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LTS_Behaviour_Eval_Face_Eyes</valueSetName>
    </valueSet>
</CustomField>