force-app/main/default/objects/animalos__Assessment__c/fields/aos_Face_Eyes_SWF_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Face_Eyes_SWF_Score__c</fullName>
    <label>Face/Eyes - SWF Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>