force-app/main/default/objects/animalos__Assessment__c/fields/aos_Favourite_Toys_Games__c.field-meta.xml
<CustomField>
    <fullName>aos_Favourite_Toys_Games__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>Does your foster animal have a toy preference?</inlineHelpText>
    <label>Favourite Toys/Games</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loves to play</fullName>
            </value>
            <value>
                <fullName>No interest</fullName>
            </value>
            <value>
                <fullName>Hoards them</fullName>
            </value>
            <value>
                <fullName>Can become a little over stimulated when we play (might grab at hands/feet or clothing instead of toy)</fullName>
            </value>
            <value>
                <fullName>Gets frustrated and difficult to control</fullName>
            </value>
            <value>
                <fullName>Wand toy feathers</fullName>
            </value>
            <value>
                <fullName>Wand toy fur</fullName>
            </value>
            <value>
                <fullName>Fishing rod toy feathers</fullName>
            </value>
            <value>
                <fullName>Fishing rod toy fur</fullName>
            </value>
            <value>
                <fullName>Enrichment toys</fullName>
            </value>
            <value>
                <fullName>Balls</fullName>
            </value>
            <value>
                <fullName>Other (Please Describe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>