force-app/main/default/objects/animalos__Assessment__c/fields/aos_Favourite_Toys_Games_Description__c.field-meta.xml
<CustomField>
    <fullName>aos_Favourite_Toys_Games_Description__c</fullName>
    <description>Foster Care Questionnaire</description>
    <label>Favourite Toys/Games Description</label>
    <type>TextArea</type>
</CustomField>